k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lingo-sniper
  labels:
    app.kubernetes.io/name: lingo-sniper
